@@ -1,9 +1,11 @@
-Sastre 1.1 [June 19, 2020]
+Sastre 1.1 [June 22, 2020]
 ============================
 
 New features:
     - Migrate task, allowing migration of feature templates and device templates to be compatible with vManage 20.1.
     - Transform option added to list task, allowing user to test name-regex transforms against existing item names.
+    - References option added to show-template task, providing information on which device-templates reference a particular
+      feature template.
 
 Enhancements:
     - vManage information (address, user and password) is no longer required when a task uses local workdir as
